--- a/.htaccess
+++ b/.htaccess
@@ -51,22 +51,23 @@
   Header set Connection keep-alive
 </IfModule>
 <IfModule mod_rewrite.c>
-  ## URL REWRITE ##
+<IfModule mod_rewrite.c>
   RewriteEngine On
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule ^(.+?)/$ /$1 [R=301,NE,L]
   
-  RewriteCond %{REQUEST_FILENAME}\.html -f
-  RewriteRule ^(.*)$ $1.html [NC,L]
-  
-  RewriteCond %{REQUEST_FILENAME}\.php -f
-  RewriteRule ^(.*)$ $1.php [NC,L]
-
-  RewriteCond %{HTTP_HOST} ^alz-bot.com [NC]
-  RewriteCond %{SERVER_PORT} 80
-  RewriteRule ^(.*)$ https://alz-bot.com/$1 [R,L]
-
+  # توجيه الطلبات غير الموجودة إلى الصفحة الرئيسية
   RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule ^(.*)$ /index.php [L]
+
+  # قواعد لإعادة كتابة الروابط (URL Rewrite) لملفات PHP
+  RewriteRule ^about$ /about.php [L]
+  RewriteRule ^contact$ /contact.php [L]
+  
+  # قواعد لإعادة كتابة الروابط للملفات الأخرى بامتداد PHP
+  RewriteCond %{REQUEST_FILENAME}.php -f
+  RewriteRule ^(.*)$ $1.php [NC,L]
+  
+  # إعدادات إضافية يمكن إضافتها وتعديلها حسب احتياجاتك
 
   ## 404 ##
   ErrorDocument 404 /404.php
